mongodb-deployment.yaml
#mongodb deployment (pod, image, replicas)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-deployment
  template:
    metadata:
      name: mongodb-deployment
      labels:
        app: mongodb-deployment
    spec:
      containers:
        - name: mongodb-deployment
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
              protocol: TCP
      restartPolicy: Always
---
#mongoDB service
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb-deployment
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
